Fix top overflow / Start to work on setting

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,8 @@ body {
     background-color: #333;
     width: 100%;
     height: 100vh;
-    // overflow: hidden;
+    overflow-x: hidden;
+    overflow: hidden;
     color: white;
     font-size: 5px;
 }
